2002-08-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/GNUmakefile: [CYGWIN] Install bug-lilypond-cygwin.  Typo
	fix.  Add kpsewhich commands (Thanks Mats).

	* cygwin/bug-lilypond-cygwin.sh: New file.

	* stepmake/stepmake/help2man-rules.make: Better way of showing
	help2man command.

	* Documentation/topdocs/FAQ.texi: Add more possible stale font
	paths.

	* stepmake/bin/package-diff.py: Prepend ./ to cut-and-pastable
	commands.

	* Documentation/topdocs/INSTALL.texi: Mention the need to and how
	to create configure for CVS source trees.  Mention libkpathsea-dev
	as alternative possible name for tetex-devel (or should that be
	the other way around?).

2002-08-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/file-results.hh (class Input_file_settings):
	encapsulate file settings in a class, Input_file_settings.

	* lily/scores.cc: new function ly_set_point_and_click_x
	
	* Documentation/topdocs/README.texi (Top): add note about xdelta

	* Documentation/topdocs/INSTALL.texi (Top): move kpathsea to problems
	section.
	
2002-08-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/ly2dvi.py: Remove debug printing.

2002-08-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py (FatalConversionError.conv): bug in
	verticalExtent replacement.

	* VERSION: 1.73 released.

2002-08-14 <jiba@tuxfamily.org>

	* scm/output-lib.scm: Support of hammers and pulls in tablature
	-- Hammers and pulls are inserted exactly like slurs, and a "H" or
	a "P" is added over the slur as needed.  

	* ./input/test/tablature-hammer.ly: example of hammer, pull and
	legato in a tablature.

	* ly/engraver-init.ly: Stem.up-to-staff is now disabled by
	default, since it appears that most of the published tablatures
	are not like that.

2002-08-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (brew_molecule): use
	Staff_symbol_referencer::staff_space for thickness.

2002-08-14  Jan Nieuwenhuizen  <janneke@gnu.org>
