@@ -1,5 +1,10 @@
 2002-08-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/scores.cc (Input_file_settings): Initalize global_header_.
+
+	* lily/include/file-results.hh (class Input_file_settings): Add
+	private constructor.
+
 	* cygwin/GNUmakefile: [CYGWIN] Install bug-lilypond-cygwin.  Typo
 	fix.  Add kpsewhich commands (Thanks Mats).
 
